--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -34,6 +34,7 @@
   width: 124px;
   height: 45px;
   box-sizing: border-box;
+  margin-left: 30px;
 }
 
 .icon-container {
@@ -110,6 +111,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-right: 30px;
 }
 
 .menu-popup {
