fix material diamond in view360 and componen footer

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -117,7 +117,7 @@
 .menu-popup {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 30px;
   background: white;
   border-radius: 30px;
   width: 456px;
