--- a/src/components/view360/View360.css
+++ b/src/components/view360/View360.css
@@ -81,7 +81,7 @@
     transform: rotate(0deg);
   }
 
-    {
+  100% {
     transform: rotate(360deg);
   }
 }
@@ -171,7 +171,7 @@
     transform: translateX(-50%) translateY(20px);
   }
 
-  <<<<<<< HEAD=======>>>>>>>quoctimirror to {
+  to {
     opacity: 1;
     transform: translateX(-50%) translateY(0);
   }
@@ -430,7 +430,7 @@
   background: rgba(255, 255, 255, 0.2);
   border-radius: 2px;
   outline: none;
-  -webkit-appearance: none;
+  /* -webkit-appearance: none; */
 }
 
 .speed-control input[type="range"]::-webkit-slider-thumb {
