--- a/src/components/collections/Section4CollectionDetail.css
+++ b/src/components/collections/Section4CollectionDetail.css
@@ -161,7 +161,7 @@
 }
 
 .view-product-button:hover .button-background {
-  fill: #bc224c;
+  fill: #BC224C;
 }
 
 .view-product-button:hover .button-text {
