--- a/src/components/collections/Collection.css
+++ b/src/components/collections/Collection.css
@@ -410,13 +410,17 @@ html {
   content: "";
   position: absolute;
   width: 100%;
-  height: 2px;
+  height: 1px;
   background: #ffffff;
   bottom: -5px;
   left: 0;
   transform: scaleX(0);
   transform-origin: left;
   transition: transform 0.4s ease-out;
+}
+
+.hover-underline:hover {
+  color: #ffffff;
 }
 
 .hover-underline:hover::after {
